--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,15 @@ services:
   - docker
 jdk:
   - oraclejdk8
-install: true
 
 env:
   - GROUP=micro-shop COMMIT=$TRAVIS_COMMIT TAG=$TRAVIS_TAG REPO=catalog;
 
-script:
-  - set -e
-  - sudo ./scripts/build.sh;
-
 after_success:
-  - set -e;
-  - if [ -z "$DOCKER_PASS" ] ; then
-      echo "This is a build triggered by an external PR. Skipping docker push.";
-      exit 0;
-    fi;
-  - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS;
-  - ./scripts/push.sh
+  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
+          push "$REPO:$TAG";
+  - export NAME=$GROUP/$REPO
+  - docker build -t $NAME:$COMMIT
+  - docker tag $NAME:$COMMIT $NAME:$TAG
+  - docker push $NAME
