--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ jdk:
   - oraclejdk8
 
 env:
-  - GROUP=micro-shop COMMIT=$TRAVIS_COMMIT TAG=$TRAVIS_TAG REPO=catalog;
+  - GROUP=microshop COMMIT=$TRAVIS_COMMIT TAG=$TRAVIS_TAG REPO=catalog;
 
 after_success:
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
