--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ after_success:
   - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
           push "$REPO:$TAG";
   - export NAME=$GROUP/$REPO
-  - docker build -t $NAME:$COMMIT
-  - docker tag $NAME:$COMMIT $NAME:$TAG
-  - docker push $NAME
+
+  - docker build -t ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:${TRAVIS_BUILD_ID} .
+  - docker push ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:${TRAVIS_BUILD_ID}
+  - docker tag ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:${TRAVIS_BUILD_ID} ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:latest
+  - docker push ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:latest
