--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
           push "$REPO:$TAG";
   - export NAME=$GROUP/$REPO
 
-  - docker build -t ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:${TRAVIS_BUILD_ID} .
-  - docker push ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:${TRAVIS_BUILD_ID}
-  - docker tag ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:${TRAVIS_BUILD_ID} ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:latest
-  - docker push ${DOCKER_USERNAME}/${DOCKER_IMAGE_NAME}:latest
+  - docker build -t ${DOCKER_USERNAME}/${REPO}:${TRAVIS_BUILD_ID} .
+  - docker push ${DOCKER_USERNAME}/${REPO}:${TRAVIS_BUILD_ID}
+  - docker tag ${DOCKER_USERNAME}/${REPO}:${TRAVIS_BUILD_ID} ${DOCKER_USERNAME}/${REPO}:latest
+  - docker push ${DOCKER_USERNAME}/${REPO}:latest
