--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,32 @@ jdk:
   - oraclejdk8
 
 env:
-  - GROUP=microshop COMMIT=$TRAVIS_COMMIT TAG=$TRAVIS_TAG REPO=catalog;
+  global:
+    - COMMIT=${TRAVIS_COMMIT::8}
+    - IMAGE=microshop/catalog
+    - IMAGE_VERSION=$IMAGE:$COMMIT
+
+before_script:
+  - docker build -t $IMAGE:$COMMIT .
+  - docker tag $IMAGE:$COMMIT $IMAGE:latest
+  - docker tag $IMAGE:$COMMIT $IMAGE:travis-$TRAVIS_BUILD_NUMBER
+
+script:
+  - docker version
 
 after_success:
   - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH ; fi`
-          push "$REPO:$TAG";
-  - export NAME=$GROUP/$REPO
+  - docker push $IMAGE
 
-  - docker build -t ${DOCKER_USERNAME}/${REPO} .
-  - docker push ${DOCKER_USERNAME}/${REPO}
+  # Install kubernetes and set config
+  - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+  - chmod +x ./kubectl
+  - sudo mv ./kubectl /usr/local/bin/kubectl
+
+  - kubectl config set-credentials default --username=${GKE_USERNAME} --password=${GKE_PASSWORD}
+  - kubectl config set-cluster default --server=${GKE_SERVER} --insecure-skip-tls-verify=true
+  - kubectl config set-context default --cluster=default --user=default
+  - kubectl config use-context default
+  #- kubectl rolling-update catalog --image=$IMAGE_VERSION
+  - kubectl set image deployment/catalog catalog=$IMAGE_VERSION
+  #- kubectl apply -f ./deployment/catalog-deployment.yml
