--- a/deployment/catalog-deployment.yaml
+++ b/deployment/catalog-deployment.yaml
@@ -2,20 +2,25 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: catalog
+  name: cart
   labels:
-    name: catalog
+    name: cart
   namespace: default
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        name: catalog
+        name: cart
     spec:
       containers:
-      - name: catalog
-        image: microshop/catalog:latest
+      - name: cart
+        image: microshop/cart:latest
+        env:
+         - name: ZIPKIN
+           value: zipkin.zipkin.svc.cluster.local
+         - name: JAVA_OPTS
+           value: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom
         resources:
           limits:
             cpu: 500m
@@ -23,11 +28,6 @@ spec:
           requests:
             cpu: 200m
             memory: 500Mi
-          env:
-          - name: MONGO_HOST
-            value: catalog-db:27017
-          - name: JAVA_OPTS
-            value: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom
         ports:
         - containerPort: 80
         securityContext:
@@ -39,5 +39,12 @@ spec:
             add:
               - NET_BIND_SERVICE
           readOnlyRootFilesystem: true
+        volumeMounts:
+        - mountPath: /tmp
+          name: tmp-volume
+      volumes:
+        - name: tmp-volume
+          emptyDir:
+            medium: Memory
       nodeSelector:
         beta.kubernetes.io/os: linux
