--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ jdk:
 env:
   global:
     - COMMIT=${TRAVIS_COMMIT::8}
-    - IMAGE=microshop/catalog
+    - IMAGE=microshop/cart
     - IMAGE_VERSION=$IMAGE:$COMMIT
 
 before_script:
@@ -32,6 +32,6 @@ after_success:
   - kubectl config set-cluster default --server=${GKE_SERVER} --insecure-skip-tls-verify=true
   - kubectl config set-context default --cluster=default --user=default
   - kubectl config use-context default
-  #- kubectl rolling-update catalog --image=$IMAGE_VERSION
-  - kubectl set image deployment/catalog catalog=$IMAGE_VERSION
-  #- kubectl apply -f ./deployment/catalog-deployment.yml
+  #- kubectl rolling-update cart --image=$IMAGE_VERSION
+  - kubectl set image deployment/cart cart=$IMAGE_VERSION
+  #- kubectl apply -f ./deployment/cart-deployment.yml
