--- a/deployment/catalog-db-service.yaml
+++ b/deployment/catalog-db-service.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: catalog-db
+  name: cart-db
   labels:
-    name: catalog-db
+    name: cart-db
   namespace: default
 spec:
   ports:
@@ -12,4 +12,4 @@ spec:
   - port: 27017
     targetPort: 27017
   selector:
-    name: catalog-db
+    name: cart-db
