--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ jdk:
 env:
   global:
     - COMMIT=${TRAVIS_COMMIT::8}
-    - IMAGE=microshop/cart
+    - IMAGE=microshop/catalog
     - IMAGE_VERSION=$IMAGE:$COMMIT
 
 before_script:
@@ -30,8 +30,8 @@ after_success:
 
   - kubectl config set-credentials default --username=${GKE_USERNAME} --password=${GKE_PASSWORD}
   - kubectl config set-cluster default --server=${GKE_SERVER} --insecure-skip-tls-verify=true
-  - kubectl config set-context default --cluster=default --user2=default
+  - kubectl config set-context default --cluster=default --user=default
   - kubectl config use-context default
   #- kubectl rolling-update cart --image=$IMAGE_VERSION
-  - kubectl set image deployment/cart cart=$IMAGE_VERSION
+  - kubectl set image deployment/catalog catalog=$IMAGE_VERSION
   #- kubectl apply -f ./deployment/cart-deployment.yml
