--- a/deployment/catalog-service.yaml
+++ b/deployment/catalog-service.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: cart
+  name: catalog
   labels:
-    name: cart
+    name: catalog
   namespace: default
 spec:
   ports:
@@ -12,4 +12,4 @@ spec:
   - port: 80
     targetPort: 80
   selector:
-    name: cart
+    name: catalog
