--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://localhost:32769/OnlineShop
+spring.datasource.url = jdbc:mysql://${db:catalog-db}:27017/OnlineShop
 
 # Username and password
 spring.datasource.username = root
@@ -37,4 +37,4 @@ spring.application.name=catalog
 endpoints.health.enabled=false
 # Disable actuator metrics endpoints
 endpoints.metrics.enabled=false
-server.port = 8090
+#server.port = 8090
