--- a/deployment/catalog-db-pvc.yaml
+++ b/deployment/catalog-db-pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: mysql-pv-claim
+  name: catalog-mysql-pv-claim
 spec:
   accessModes:
     - ReadWriteOnce
