--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@
 
 # Connection url for the database "netgloo_blog"
 spring.datasource.url = jdbc:mysql://${db:catalog-db}:3306/data
+#spring.datasource.url = jdbc:mysql://localhost:32769/OnlineShop
 
 # Username and password
 spring.datasource.username = root
@@ -29,7 +30,9 @@ spring.jpa.show-sql = true
 # schema will be automatically updated accordingly to java entities found in
 # the project
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto
+#spring.datasource.data=data-mysql.sql
+spring.datasource.initialize=true
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
