--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,9 +30,7 @@ spring.jpa.show-sql = true
 # schema will be automatically updated accordingly to java entities found in
 # the project
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto
-#spring.datasource.data=data-mysql.sql
-spring.datasource.initialize=true
+spring.jpa.hibernate.ddl-auto = create
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
