--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.datasource.url = jdbc:mysql://${db:catalog-db}:3306/data
 spring.datasource.username = root
 spring.datasource.password = mysql
 
+spring.datasource.platform=mysql
+
 # Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.testWhileIdle = true
 spring.datasource.validationQuery = SELECT 1
@@ -30,7 +32,8 @@ spring.jpa.show-sql = true
 # schema will be automatically updated accordingly to java entities found in
 # the project
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.data=classpath:/data-mysql.sql
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
