--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
-spring.datasource.url = jdbc:mysql://${db:catalog-db}:3306/data
-#spring.datasource.url = jdbc:mysql://localhost:32769/OnlineShop
+#spring.datasource.url = jdbc:mysql://${db:catalog-db}:3306/data
+spring.datasource.url = jdbc:mysql://localhost:32769/OnlineShop
 
 # Username and password
 spring.datasource.username = root
