--- a/deployment/catalog-db-deployment.yaml
+++ b/deployment/catalog-db-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   name: catalog-db
   labels:
     name: catalog-db
-  namespace: default
+  namespace: microshop
 spec:
   replicas: 1
   template:
