--- a/deployment/catalog-db-pvc.yaml
+++ b/deployment/catalog-db-pvc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: catalog-mysql-pv-claim
+  namespace: microshop
 spec:
   accessModes:
     - ReadWriteOnce
