--- a/deployment/catalog-db-service.yaml
+++ b/deployment/catalog-db-service.yaml
@@ -5,7 +5,7 @@ metadata:
   name: catalog-db
   labels:
     name: catalog-db
-  namespace: default
+  namespace: microshop
 spec:
   ports:
     # the port that this service should serve on
