--- a/deployment/catalog-deployment.yaml
+++ b/deployment/catalog-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   name: catalog
   labels:
     name: catalog
-  namespace: default
+  namespace: microshop
 spec:
   replicas: 1
   template:
