--- a/.travis.yml
+++ b/.travis.yml
@@ -33,5 +33,5 @@ after_success:
   - kubectl config set-context default --cluster=default --user=default
   - kubectl config use-context default
   #- kubectl rolling-update cart --image=$IMAGE_VERSION
-  - kubectl set image deployment/catalog catalog=$IMAGE_VERSION
+  - kubectl set image deployment/catalog catalog=$IMAGE_VERSION --namespace=microshop
   #- kubectl apply -f ./deployment/cart-deployment.yml
